modificacoes visao_logs

--- a/dispenserproject/templates/visao_logs.html
+++ b/dispenserproject/templates/visao_logs.html
@@ -83,8 +83,8 @@
                                 <th>ID do log</th>
                                 <th>Dispenser</th>
                                 <th>Data</th>
-                                <th>Tensão Baterial</th>
-                                <th>Nível de papel</th>
+                                <th>Tensão da Bateria (V)</th>
+                                <th>Nível de papel (%)</th>
                             </tr>
                         </thead>
                         <tbody>
