--- a/dispenserproject/templates/visao_logs.html
+++ b/dispenserproject/templates/visao_logs.html
@@ -75,6 +75,9 @@
                        class="btn btn-primary">Exportar</a>
                     <a type="button" href="{% url 'deleta_logs' %}"
                        class="btn btn-primary">Deletar registros</a>
+                    <div class="container" align="right">
+                        <h5>Quantidade de logs na tabela: <p id="qtde_logs"></p></h5>
+                    </div>
                 </div>
                 <div class="container" style="margin-top:20px">
                     <table id="table_logs_dispenser" border="1" class="display" style="width:100%">
@@ -127,7 +130,7 @@
     <script src="/static/js/js/jquery.dataTables.min.js"></script>
     <script>
         dados = {{dados|safe}};
-
+        qtde_logs = {{qtde_logs|safe}};
     </script>
 
 </html>
