--- a/dispenserproject/templates/visao_logs.html
+++ b/dispenserproject/templates/visao_logs.html
@@ -111,7 +111,7 @@
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
 <!--    <script type="text/javascript" src="/static/js/datatables.min.js"></script>-->
-    <script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.min.js'></script>
+    <script type='text/javascript' src='https://code.jquery.com/jquery-1.7.2.min.js'></script>
     <script src="/static/js/moment.min.js"></script>
     <script src="/static/js/tooplate-scripts.js"></script>
     <script src="/static/js/datatables.min.js"
