--- a/dispenserproject/templates/dashboard.html
+++ b/dispenserproject/templates/dashboard.html
@@ -16,8 +16,6 @@
     <!-- https://fonts.google.com/specimen/Open+Sans -->
     <link rel="stylesheet" href="/static/css/fontawesome.min.css">
     <!-- https://fontawesome.com/ -->
-    <link rel="stylesheet" href="/static/css/fullcalendar.min.css">
-    <!-- https://fullcalendar.io/ -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <!-- https://getbootstrap.com/ -->
     <link rel="stylesheet" href="/static/css/tooplate.css">
@@ -27,8 +25,7 @@
     <div class="" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                <div class="col-12">
+                <div class="col-9">
                     <nav class="navbar navbar-expand-xl navbar-light bg-light">
                         <a class="navbar-brand" href="#">
                             <div>
@@ -78,35 +75,31 @@
                         </div>
                     </nav>
                 </div>
-            </div>
 <!--             row -->
-            <div class="row tm-content-row tm-mt-big">
-
-
-<!--                Gráficos de pizza -->
-<!--                <div class="container-fluid">-->
-<!--                    <div class="tm-col tm-col-big">-->
-<!--                        <h2 class="tm-block-title">Dispenser A</h2>-->
-<!--                        <div class="bg-white tm-block h-100">-->
-<!--                            <canvas id="pieChart"></canvas>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-                <div class="container-fluid" style="margin-left:120px; width:100%">
-                    <div id="chartContainer" style="height: 400px; width: 300%"></div>
+            <div class="col-8" style="margin-top:30px">
+                <div class="container-fluid" style="width:100%; margin-left:50px" align="center">
+                    <div id="chartContainer" style="height:300px;width:100%"></div>
                     {% if request.user.is_superuser %}
-                    <div id="grafico_bateria" style="height: 400px; width: 300%; margin-top:50px"></div>
+                    <div id="grafico_bateria" style="height: 300px; width: 100%; margin-top:50px"></div>
                     {% endif %}
                     <div class="container" align="center">
                         <h2 id="sem_dispenser">Olá! Você ainda não possui dispensers cadastrados.</h2>
                     </div>
                 </div>
-<!--                 Conteúdo 3-->
-                <div class="tm-col tm-col-big">
-                    <div class="bg-white tm-block h-100">
-<!--                        <h2 class="tm-block-title">Consumo mensal por dispenser</h2>-->
-                        <canvas id="barChart"></canvas>
-                    </div>
+                <!-- Tabela -->
+                <div class="container-fluid" style="margin-top:20px;margin-bottom:20px;margin-left:50px">
+<!--                    <table id="table_cadastro_dispenser" border="1" class="display" style="width:100%">-->
+<!--                        <thead>-->
+<!--                            <tr>-->
+<!--                                <th>Dispenser</th>-->
+<!--                                <th>Usuário</th>-->
+<!--                                <th>Localização</th>-->
+<!--                                <th>Ação</th>-->
+<!--                            </tr>-->
+<!--                        </thead>-->
+<!--                        <tbody>-->
+<!--                        </tbody>-->
+<!--                    </table>-->
                 </div>
             </div>
             {% if request.user.is_superuser %}
@@ -125,51 +118,19 @@
             </footer>
         </div>
     </div>
+</div>
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <!-- https://jquery.com/download/ -->
     <script src="/static/js/moment.min.js"></script>
     <!-- https://momentjs.com/ -->
-    <script src="/static/js/utils.js"></script>
     <script src="/static/js/Chart.min.js"></script>
     <!-- http://www.chartjs.org/docs/latest/ -->
-    <script src="/static/js/fullcalendar.min.js"></script>
-    <!-- https://fullcalendar.io/ -->
     <script src="/static/js/bootstrap.min.js"></script>
     <!-- https://getbootstrap.com/ -->
-    <script src="/static/js/tooplate-scripts.js"></script>
-
+<!--    <script src="/static/js/toolplate-scripts.js"></script>-->
+<!--    <script type='text/javascript' src='/static/js/util.js'></script>-->
     <script type='text/javascript' src='/static/js/index.js'></script>
     <script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.min.js'></script>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-    <script>
-<!--        let ctxLine,-->
-<!--            ctxBar,-->
-        let ctxPie,
-<!--            ctxLine,-->
-            optionsLine,
-            optionsBar,
-            optionsPie,
-            configLine,
-<!--            configBar,-->
-            configPie,
-<!--            lineChart;-->
-<!--        barChart, -->
-        pieChart;
-        // DOM is ready
-        $(function () {
-            updateChartOptions();
-<!--            drawLineChart(); // Line Chart-->
-<!--            drawBarChart(); // Bar Chart-->
-            drawPieChart(); // Pie Chart
-            drawCalendar(); // Calendar
-
-            $(window).resize(function () {
-                updateChartOptions();
-<!--                updateLineChart();-->
-<!--                updateBarChart();-->
-                reloadPage();
-            });
-        })
-    </script>
 </body>
 </html>
