--- a/dispenserproject/templates/cadastro.html
+++ b/dispenserproject/templates/cadastro.html
@@ -23,7 +23,7 @@
 <div class="contact-area section-padding-0-80">
     <div class="container">
         <div class="container" style="text-align: center;margin-top:20px">
-            <img src="/static/img/logo_sm.png"></img>
+            <img src="/static/img/logo_sem_fundo_dash.png"></img>
         </div>
         <div class="row" style="text-align:center">
             <div class="col-12">
