--- a/dispenserproject/templates/inicial.html
+++ b/dispenserproject/templates/inicial.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="container" style="text-align: center;margin-top:20px">
-        <img src="/static/img/logo.png"></img>
+        <img src="/static/img/logo_dash.png"></img>
     </div>
 
     <div class="contact-area section-padding-0-80">
@@ -30,7 +30,7 @@
             <div class="row" style="text-align:center">
                 <div class="col-12">
                     <div class="section-heading">
-                        <h2>Smart Dispenser</h2>
+                        <h8>SMART DISPENSER</h8>
                     </div>
                 </div>
             </div>
@@ -42,16 +42,16 @@
                             {% csrf_token %}
                             <table align="center" style="margin-top:40px">
                                 <tr>
-                                    <td align="center">
-                                        <div class="col-8 col-lg-12">
+                                    <td align="left">
+                                        <div class="col-16 col-lg-12" style="margin-left:-10px">
                                         <label for="email"><b>Email</b></label>
                                                 <input type="text" id="email" class="form-control" name="email" placeholder="Entre com o email cadastrado">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td align="center">
-                                        <div class="col-8 col-lg-12">
+                                    <td align="left">
+                                        <div class="col-16 col-lg-12" style="margin-left:-10px">
                                             <label for="senha"><b>Senha</b></label>
                                             <input id="senha" type="password" class="form-control" name="senha" placeholder="Digite aqui sua senha">
                                         </div>
@@ -60,8 +60,17 @@
                                 <tr>
                                     <td align="center">
                                         <div class="col-12 text-center">
-                                            <button class="btn btn-success" type="submit">Acessar sua conta</button>
-                                            <button type="button" class="btn btn-primary" onclick="exibirCriarConta()">Ainda não tem conta? Clique aqui</button>
+                                            <button class="btn btn-success" style="margin-top:15px; margin-left:-15px" type="submit">Acessar sua conta</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center">
+                                        <div class="col-12 text-center">
+                                            <button type="button" class="btn btn-primary"
+                                                    style="font-size:15px;margin-top:15px;margin-left:auto;margin-right:auto"
+                                                    onclick="exibirCriarConta()">
+                                                Ainda não tem conta? Clique aqui!</button>
                                         </div>
                                     </td>
                                 </tr>
