--- a/dispenserproject/templates/cadastrarusuarios.html
+++ b/dispenserproject/templates/cadastrarusuarios.html
@@ -25,7 +25,7 @@
 <!--    Tabela-->
     <link rel="stylesheet" href="/static/css/datatables.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
-    <link rel="stylesheet" href="/static/css/cadastrardispenser.css">
+    <link rel="stylesheet" href="/static/css/cadastrarusuarios.css">
 <!--    <link rel="stylesheet" href="/static/css/css/bootstrap.min.css">-->
 <!--    <link rel="stylesheet" href="/static/css/css/datatables.min.css">-->
 <!--    <link rel="stylesheet" href="/static/css/css/tooplate.css">-->
@@ -80,13 +80,14 @@
                        class="btn btn-primary">Adicionar</a>
                 </div>
                 <div class="container" style="margin-top:20px">
-                    <table id="table_cadastro_dispenser" border="1" class="display" style="width:100%">
+                    <table id="table_cadastro_usuario" border="1" class="display" style="width:100%">
                         <thead>
                             <tr>
-                                <th>Dispenser</th>
-                                <th>Usuário</th>
-                                <th>Localização</th>
-                                <th>Ação</th>
+                                <th>Username</th>
+                                <th>Email</th>
+                                <th>Data de inclusão</th>
+                                <th>Último login</th>
+                                <th>Excluir?</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -107,37 +108,6 @@
         </div>
 </body>
 
-<form id="form_edicao_dispenser" method="POST" action="{% url 'edita_disperser' %}">{% csrf_token %}
-    <div class="modal" tabindex="-1" role="dialog" id="modal_edita_dispenser">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Editar Dispenser</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="row" style="margin-left:5px">
-                <h8 name="identificao_dispenser" id="identificao_dispenser"></h8>
-                <input type="hidden" name="id_dispenser" id="id_disperser"></input>
-            </div>
-            <div class="row" style="margin-top:15px;margin-left:5px">
-                <select name="email_usuario" id="email_usuario"></select>
-            </div>
-            <div class="row" style="margin-top:15px;margin-left:5px">Localização:
-                <textarea rows="3" class="form-control" name="localizacao_dispenser" id="localizacao_dispenser"></textarea>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn botao-abrir">Salvar</button>
-            <button type="button" class="btn botao-fechar" data-dismiss="modal">Fechar</button>
-          </div>
-        </div>
-      </div>
-    </div>
-</form>
-
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
 <!--    <script type="text/javascript" src="/static/js/datatables.min.js"></script>-->
@@ -150,7 +120,7 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script type='text/javascript' src='https://code.jquery.com/jquery-1.7.2.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-    <script src="/static/js/cadastrardispenser.js"></script>
+    <script src="/static/js/cadastrarusuarios.js"></script>
 
 <!--    <script src="/static/js/js/dataTables.bootstrap.min.js"></script>-->
 <!--    <script src="/static/js/js/dataTables.bootstrap4.min.js"></script>-->
@@ -159,8 +129,8 @@
 <!--    <script src="/static/js/js/dataTables.semanticui.min.js"></script>-->
     <script src="/static/js/js/jquery.dataTables.min.js"></script>
     <script>
-        dados = {{dados|safe}};
-        usuarios = {{usuarios|safe}}
+        dados = {{usuarios|safe}};
+
     </script>
 
 </html>
