--- a/dispenserproject/templates/visao_logs.html
+++ b/dispenserproject/templates/visao_logs.html
@@ -59,6 +59,9 @@
                                             <a class="nav-link" href="{% url 'cadastrardispenser' %}">Cadastrar Dispenser</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'cadastro_usuarios' %}">Usuários</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link" href="{% url 'visao_logs' %}">Logs</a>
                                     </li>
                                 {% endif %}
