--- a/dispenserproject/templates/dashboard.html
+++ b/dispenserproject/templates/dashboard.html
@@ -49,6 +49,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                                     </li>
+                                    <li class="nav-item">
+                                            <a class="nav-link" href="{% url 'historico' %}">Histórico</a>
+                                    </li>
                                 {% if request.user.is_superuser %}
                                     <li class="nav-item">
                                             <a class="nav-link" href="{% url 'cadastrardispenser' %}">Cadastrar Dispenser</a>
