--- a/dispenserproject/templates/historico.html
+++ b/dispenserproject/templates/historico.html
@@ -159,6 +159,9 @@
 <!--    <script src="/static/js/js/dataTables.jqueryui.min.js"></script>-->
 <!--    <script src="/static/js/js/dataTables.semanticui.min.js"></script>-->
     <script src="/static/js/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/rowreorder/1.2.7/js/dataTables.rowReorder.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.6/js/dataTables.responsive.min.js"></script>
     <script>
         dados = {{historico|safe}};
         console.log(dados);
